Batch update of generated files

--- a/home_shortnews.html
+++ b/home_shortnews.html
@@ -81,6 +81,33 @@
     // Example JSON array with news objects
     const newsData = [
   {
+    "title": "Hãng ô tô Audi cắt giảm hàng nghìn việc làm ở Đức",
+    "content": "Hãng ô tô Audi đã quyết định cắt giảm 7.500 việc làm tại Đức, tương đương 8% lực lượng lao động toàn cầu của hãng, nhằm đối phó với những thách thức trong ngành ô tô hiện nay, bao gồm nhu cầu chậm lại đối với xe điện và sự cạnh tranh gia tăng. Quyết định này dự kiến sẽ được thực hiện vào cuối năm 2029 thông qua các hình thức sa thải tự nguyện và chấm dứt hợp đồng. Chủ tịch Audi cũng nhấn mạnh rằng sẽ không có sa thải bắt buộc cho đến năm 2033, nhằm bảo đảm việc làm cho nhân viên trong bối cảnh kinh tế khó khăn.",
+    "link": "https://tuoitre.vn/hang-o-to-audi-cat-giam-hang-nghin-viec-lam-o-duc-20250318171943316.htm",
+    "cat": "kinh-doanh",
+    "positivity": 4,
+    "importance": 7,
+    "question": "Tại sao Audi cắt giảm việc làm ở Đức?",
+    "answers": [
+      {
+        "text": "Do thách thức trong ngành công nghiệp ô tô và nhu cầu chậm lại đối với xe điện.",
+        "correct": true
+      },
+      {
+        "text": "Để tăng cường sản xuất xe điện mới.",
+        "correct": false
+      },
+      {
+        "text": "Vì lý do tài chính cá nhân của nhân viên.",
+        "correct": false
+      },
+      {
+        "text": "Để mở rộng thị trường sang châu Á.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Suy thận nghi do ăn mặn",
     "content": "Ông Sang, 52 tuổi, đã mắc suy thận cấp do thói quen ăn mặn, mặc dù không có tiền sử bệnh nền về thận. Sự tiêu thụ muối cao gây áp lực lên hệ thống tuần hoàn và làm suy giảm chức năng thận. Các bác sĩ đã khuyến nghị ông giảm muối trong chế độ ăn uống, dẫn đến cải thiện sức khỏe sau 6 tháng. Báo cáo cho thấy người Việt tiêu thụ muối vượt mức khuyến cáo, dẫn đến nhiều vấn đề sức khỏe nghiêm trọng.",
     "link": "https://vnexpress.net/suy-than-nghi-do-an-man-4863180.html",
@@ -1352,28 +1379,28 @@
     ]
   },
   {
-    "title": "Hơn thập kỷ vô sinh do biến chứng đái tháo đường",
-    "content": "Anh Tiến, 47 tuổi, đã phải sống với tình trạng vô sinh suốt 12 năm do biến chứng đái tháo đường, dẫn đến rối loạn cương và không có tinh trùng. Sau khi điều trị tại các cơ sở y tế ở Mỹ mà không thành công, anh đã trở về Việt Nam để thực hiện phương pháp thụ tinh ống nghiệm tại IVF Tâm Anh TP HCM. Dù gặp khó khăn trong việc xuất tinh, bác sĩ vẫn tìm ra tinh trùng trong nước tiểu và áp dụng phương pháp TESE để thu tinh trùng cho quá trình thụ tinh ống nghiệm, với kết quả khả quan.",
-    "link": "https://vnexpress.net/hon-thap-ky-vo-sinh-do-bien-chung-dai-thao-duong-4862993.html",
+    "title": "Bạch cầu tăng gấp 20 lần do ung thư máu nhưng không triệu chứng",
+    "content": "Anh Mạnh, 32 tuổi, đã phát hiện bệnh ung thư máu khi đi khám sức khỏe vì thừa cân. Kết quả xét nghiệm cho thấy lượng bạch cầu của anh tăng gấp 20 lần so với mức bình thường, điều này là dấu hiệu cho thấy bệnh đang tiến triển mà không có triệu chứng rõ ràng. Các bác sĩ đã xác định anh mắc bạch cầu cấp loại M4, một dạng ung thư máu nguy hiểm, và đang tiến hành điều trị tích cực nhằm giảm số lượng bạch cầu và ngăn chặn sự phát triển của tế bào ác tính.",
+    "link": "https://vnexpress.net/bach-cau-tang-gap-20-lan-do-ung-thu-mau-nhung-khong-trieu-chung-4862874.html",
     "cat": "suc-khoe",
-    "positivity": 7,
+    "positivity": 3,
     "importance": 8,
-    "question": "Anh Tiến đã bị vô sinh do nguyên nhân gì?",
+    "question": "Tại sao bạch cầu của anh Mạnh lại tăng cao đến 20 lần?",
     "answers": [
       {
-        "text": "Biến chứng đái tháo đường",
+        "text": "Vì anh Mạnh mắc ung thư máu.",
         "correct": true
       },
       {
-        "text": "Thiếu hoạt động thể chất",
+        "text": "Vì anh Mạnh bị nhiễm virus.",
         "correct": false
       },
       {
-        "text": "Chế độ ăn uống kém",
+        "text": "Vì anh Mạnh ăn uống không điều độ.",
         "correct": false
       },
       {
-        "text": "Căng thẳng tâm lý",
+        "text": "Vì anh Mạnh thường xuyên tập thể dục.",
         "correct": false
       }
     ]
@@ -1406,28 +1433,28 @@
     ]
   },
   {
-    "title": "Bạch cầu tăng gấp 20 lần do ung thư máu nhưng không triệu chứng",
-    "content": "Anh Mạnh, 32 tuổi, đã phát hiện bệnh ung thư máu khi đi khám sức khỏe vì thừa cân. Kết quả xét nghiệm cho thấy lượng bạch cầu của anh tăng gấp 20 lần so với mức bình thường, điều này là dấu hiệu cho thấy bệnh đang tiến triển mà không có triệu chứng rõ ràng. Các bác sĩ đã xác định anh mắc bạch cầu cấp loại M4, một dạng ung thư máu nguy hiểm, và đang tiến hành điều trị tích cực nhằm giảm số lượng bạch cầu và ngăn chặn sự phát triển của tế bào ác tính.",
-    "link": "https://vnexpress.net/bach-cau-tang-gap-20-lan-do-ung-thu-mau-nhung-khong-trieu-chung-4862874.html",
+    "title": "Hơn thập kỷ vô sinh do biến chứng đái tháo đường",
+    "content": "Anh Tiến, 47 tuổi, đã phải sống với tình trạng vô sinh suốt 12 năm do biến chứng đái tháo đường, dẫn đến rối loạn cương và không có tinh trùng. Sau khi điều trị tại các cơ sở y tế ở Mỹ mà không thành công, anh đã trở về Việt Nam để thực hiện phương pháp thụ tinh ống nghiệm tại IVF Tâm Anh TP HCM. Dù gặp khó khăn trong việc xuất tinh, bác sĩ vẫn tìm ra tinh trùng trong nước tiểu và áp dụng phương pháp TESE để thu tinh trùng cho quá trình thụ tinh ống nghiệm, với kết quả khả quan.",
+    "link": "https://vnexpress.net/hon-thap-ky-vo-sinh-do-bien-chung-dai-thao-duong-4862993.html",
     "cat": "suc-khoe",
-    "positivity": 3,
+    "positivity": 7,
     "importance": 8,
-    "question": "Tại sao bạch cầu của anh Mạnh lại tăng cao đến 20 lần?",
+    "question": "Anh Tiến đã bị vô sinh do nguyên nhân gì?",
     "answers": [
       {
-        "text": "Vì anh Mạnh mắc ung thư máu.",
+        "text": "Biến chứng đái tháo đường",
         "correct": true
       },
       {
-        "text": "Vì anh Mạnh bị nhiễm virus.",
+        "text": "Thiếu hoạt động thể chất",
         "correct": false
       },
       {
-        "text": "Vì anh Mạnh ăn uống không điều độ.",
+        "text": "Chế độ ăn uống kém",
         "correct": false
       },
       {
-        "text": "Vì anh Mạnh thường xuyên tập thể dục.",
+        "text": "Căng thẳng tâm lý",
         "correct": false
       }
     ]
@@ -1719,32 +1746,32 @@
     ]
   },
   {
-    "title": "Diên mạo ga T3 Tân Sơn Nhất trước thời điểm hoạt động",
-    "content": "Ga T3 Tân Sơn Nhất đang trong giai đoạn hoàn thiện cuối cùng trước khi chính thức đi vào hoạt động vào ngày 30/4 tới. Với tổng đầu tư 11.000 tỷ đồng, nhà ga sẽ phục vụ 20 triệu hành khách mỗi năm, nâng tổng công suất của sân bay lên 50 triệu. Công trình gồm 4 tầng nổi và 1 tầng hầm, với nhiều hạng mục đã hoàn thiện như mái lợp nhôm, kính và các hệ thống hạ tầng giao thông kết nối. Khi đưa vào hoạt động, ga T3 sẽ chịu trách nhiệm cho khoảng 80% lượng khách nội địa, giảm tải cho ga T1 đang quá tải.",
-    "link": "https://vnexpress.net/dien-mao-ga-t3-tan-son-nhat-truoc-thoi-diem-hoat-dong-4862970.html",
-    "cat": "thoi-su",
-    "positivity": 9,
+    "title": "Phụ huynh bị đưa ra xét xử vì ép con \"thú tội\" giữa trời 7 độ C",
+    "content": "Một cặp phụ huynh ở Indiana, Mỹ, đang bị truy tố vì đã ép con gái 6 tuổi đứng ngoài trời lạnh 7 độ C trong nhiều giờ cầm tấm biển \"thú tội\". Họ cho rằng hình phạt này là cần thiết để dạy dỗ con gái, nhưng hành động này đã gây ra sự phẫn nộ trong cộng đồng. Cha của bé gái, một cảnh sát, vẫn khăng khăng cho rằng hình phạt này là cách duy nhất để giáo dục con. Cảnh sát đã vào cuộc sau khi có báo cáo từ những người qua đường chứng kiến sự việc.",
+    "link": "https://dantri.com.vn/giao-duc/phu-huynh-bi-dua-ra-xet-xu-vi-ep-con-thu-toi-giua-troi-7-do-c-20250318124813740.htm",
+    "cat": "phap-luat",
+    "positivity": 1,
     "importance": 8,
-    "question": "Khi nào ga T3 Tân Sơn Nhất sẽ chính thức hoạt động?",
+    "question": "Tại sao phụ huynh ở Indiana bị truy tố?",
     "answers": [
       {
-        "text": "30/4/2025",
+        "text": "Vì ép con đứng ngoài trời lạnh cầm biển \"thú tội\"",
         "correct": true
       },
       {
-        "text": "1/5/2025",
+        "text": "Vì không cho con đi học",
         "correct": false
       },
       {
-        "text": "15/5/2025",
+        "text": "Vì không chăm sóc con đúng cách",
         "correct": false
       },
       {
-        "text": "1/6/2025",
+        "text": "Vì thường xuyên la mắng con",
         "correct": false
       },
       {
-        "text": "30/3/2025",
+        "text": "Vì không cho con ăn uống đầy đủ",
         "correct": false
       }
     ]
@@ -1804,28 +1831,32 @@
     ]
   },
   {
-    "title": "Phấn hoa - nỗi ám ảnh của người Việt ở nước ngoài",
-    "content": "Bài viết đề cập đến nỗi ám ảnh của người Việt Nam sống ở nước ngoài, đặc biệt là tại Nhật Bản, do dị ứng phấn hoa. Nhiều người như Văn Phong và Hồng Hạnh phải bỏ công việc tốt để trở về quê hương vì không thể chịu đựng được triệu chứng dị ứng nặng nề trong mùa xuân. Dị ứng phấn hoa ảnh hưởng nghiêm trọng đến sức khỏe và chất lượng cuộc sống của họ, với tỷ lệ người mắc bệnh ngày càng gia tăng.",
-    "link": "https://vnexpress.net/phan-hoa-noi-am-anh-cua-nguoi-viet-o-nuoc-ngoai-4861536.html",
-    "cat": "suc-khoe",
-    "positivity": 3,
-    "importance": 7,
-    "question": "Dị ứng phấn hoa ảnh hưởng đến người Việt ở nước ngoài như thế nào?",
+    "title": "Diên mạo ga T3 Tân Sơn Nhất trước thời điểm hoạt động",
+    "content": "Ga T3 Tân Sơn Nhất đang trong giai đoạn hoàn thiện cuối cùng trước khi chính thức đi vào hoạt động vào ngày 30/4 tới. Với tổng đầu tư 11.000 tỷ đồng, nhà ga sẽ phục vụ 20 triệu hành khách mỗi năm, nâng tổng công suất của sân bay lên 50 triệu. Công trình gồm 4 tầng nổi và 1 tầng hầm, với nhiều hạng mục đã hoàn thiện như mái lợp nhôm, kính và các hệ thống hạ tầng giao thông kết nối. Khi đưa vào hoạt động, ga T3 sẽ chịu trách nhiệm cho khoảng 80% lượng khách nội địa, giảm tải cho ga T1 đang quá tải.",
+    "link": "https://vnexpress.net/dien-mao-ga-t3-tan-son-nhat-truoc-thoi-diem-hoat-dong-4862970.html",
+    "cat": "thoi-su",
+    "positivity": 9,
+    "importance": 8,
+    "question": "Khi nào ga T3 Tân Sơn Nhất sẽ chính thức hoạt động?",
     "answers": [
       {
-        "text": "Nó khiến họ phải bỏ việc và trở về nước.",
+        "text": "30/4/2025",
         "correct": true
       },
       {
-        "text": "Nó không ảnh hưởng nhiều đến công việc.",
+        "text": "1/5/2025",
         "correct": false
       },
       {
-        "text": "Người mắc dị ứng phấn hoa luôn khỏe mạnh.",
+        "text": "15/5/2025",
         "correct": false
       },
       {
-        "text": "Mọi người đều thích mùa xuân và không lo lắng.",
+        "text": "1/6/2025",
+        "correct": false
+      },
+      {
+        "text": "30/3/2025",
         "correct": false
       }
     ]
@@ -1858,32 +1889,28 @@
     ]
   },
   {
-    "title": "Phụ huynh bị đưa ra xét xử vì ép con \"thú tội\" giữa trời 7 độ C",
-    "content": "Một cặp phụ huynh ở Indiana, Mỹ, đang bị truy tố vì đã ép con gái 6 tuổi đứng ngoài trời lạnh 7 độ C trong nhiều giờ cầm tấm biển \"thú tội\". Họ cho rằng hình phạt này là cần thiết để dạy dỗ con gái, nhưng hành động này đã gây ra sự phẫn nộ trong cộng đồng. Cha của bé gái, một cảnh sát, vẫn khăng khăng cho rằng hình phạt này là cách duy nhất để giáo dục con. Cảnh sát đã vào cuộc sau khi có báo cáo từ những người qua đường chứng kiến sự việc.",
-    "link": "https://dantri.com.vn/giao-duc/phu-huynh-bi-dua-ra-xet-xu-vi-ep-con-thu-toi-giua-troi-7-do-c-20250318124813740.htm",
-    "cat": "phap-luat",
-    "positivity": 1,
-    "importance": 8,
-    "question": "Tại sao phụ huynh ở Indiana bị truy tố?",
+    "title": "Phấn hoa - nỗi ám ảnh của người Việt ở nước ngoài",
+    "content": "Bài viết đề cập đến nỗi ám ảnh của người Việt Nam sống ở nước ngoài, đặc biệt là tại Nhật Bản, do dị ứng phấn hoa. Nhiều người như Văn Phong và Hồng Hạnh phải bỏ công việc tốt để trở về quê hương vì không thể chịu đựng được triệu chứng dị ứng nặng nề trong mùa xuân. Dị ứng phấn hoa ảnh hưởng nghiêm trọng đến sức khỏe và chất lượng cuộc sống của họ, với tỷ lệ người mắc bệnh ngày càng gia tăng.",
+    "link": "https://vnexpress.net/phan-hoa-noi-am-anh-cua-nguoi-viet-o-nuoc-ngoai-4861536.html",
+    "cat": "suc-khoe",
+    "positivity": 3,
+    "importance": 7,
+    "question": "Dị ứng phấn hoa ảnh hưởng đến người Việt ở nước ngoài như thế nào?",
     "answers": [
       {
-        "text": "Vì ép con đứng ngoài trời lạnh cầm biển \"thú tội\"",
+        "text": "Nó khiến họ phải bỏ việc và trở về nước.",
         "correct": true
       },
       {
-        "text": "Vì không cho con đi học",
+        "text": "Nó không ảnh hưởng nhiều đến công việc.",
         "correct": false
       },
       {
-        "text": "Vì không chăm sóc con đúng cách",
+        "text": "Người mắc dị ứng phấn hoa luôn khỏe mạnh.",
         "correct": false
       },
       {
-        "text": "Vì thường xuyên la mắng con",
-        "correct": false
-      },
-      {
-        "text": "Vì không cho con ăn uống đầy đủ",
+        "text": "Mọi người đều thích mùa xuân và không lo lắng.",
         "correct": false
       }
     ]
@@ -3477,33 +3504,6 @@
     ]
   },
   {
-    "title": "Dấu hiệu nào cho thấy bạn bị suy giãn tĩnh mạch?",
-    "content": "Bài viết đề cập đến các dấu hiệu cho thấy bạn có thể bị suy giãn tĩnh mạch, bao gồm cảm giác đau, mỏi và tê bì ở tay chân hoặc chuột rút. Những triệu chứng này không phải lúc nào cũng dễ dàng nhận biết, khiến cho việc phát hiện bệnh trở nên khó khăn. Nếu bạn gặp phải những triệu chứng này, nên tham khảo ý kiến của các chuyên gia y tế để được kiểm tra và tư vấn.",
-    "link": "https://vnexpress.net/dau-hieu-nao-cho-thay-ban-bi-suy-gian-tinh-mach-4862849.html",
-    "cat": "suc-khoe",
-    "positivity": 6,
-    "importance": 7,
-    "question": "Những dấu hiệu nào cho thấy bạn có thể bị suy giãn tĩnh mạch?",
-    "answers": [
-      {
-        "text": "Cảm giác đau, mỏi và tê bì tay chân",
-        "correct": true
-      },
-      {
-        "text": "Đau đầu và chóng mặt",
-        "correct": false
-      },
-      {
-        "text": "Đau bụng và tiêu chảy",
-        "correct": false
-      },
-      {
-        "text": "Mệt mỏi và khó thở",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Những thực phẩm phòng thoái hóa điểm vàng mắt",
     "content": "Bài viết đề cập đến những thực phẩm giúp phòng ngừa thoái hóa điểm vàng mắt, một bệnh lý liên quan đến tuổi tác. Các loại thực phẩm như trái cây họ cam quýt, rau củ, các loại hạt và cá béo chứa nhiều vitamin và omega-3, có tác dụng bảo vệ sức khỏe mắt và làm chậm tiến triển của bệnh. Bài viết cũng nhấn mạnh tầm quan trọng của chế độ dinh dưỡng hợp lý để duy trì thị lực và giảm nguy cơ mắc các bệnh về mắt.",
     "link": "https://vnexpress.net/nhung-thuc-pham-phong-thoai-hoa-diem-vang-mat-4862809.html",
@@ -3526,6 +3526,33 @@
       },
       {
         "text": "Thực phẩm chế biến sẵn và đồ uống có ga",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Dấu hiệu nào cho thấy bạn bị suy giãn tĩnh mạch?",
+    "content": "Bài viết đề cập đến các dấu hiệu cho thấy bạn có thể bị suy giãn tĩnh mạch, bao gồm cảm giác đau, mỏi và tê bì ở tay chân hoặc chuột rút. Những triệu chứng này không phải lúc nào cũng dễ dàng nhận biết, khiến cho việc phát hiện bệnh trở nên khó khăn. Nếu bạn gặp phải những triệu chứng này, nên tham khảo ý kiến của các chuyên gia y tế để được kiểm tra và tư vấn.",
+    "link": "https://vnexpress.net/dau-hieu-nao-cho-thay-ban-bi-suy-gian-tinh-mach-4862849.html",
+    "cat": "suc-khoe",
+    "positivity": 6,
+    "importance": 7,
+    "question": "Những dấu hiệu nào cho thấy bạn có thể bị suy giãn tĩnh mạch?",
+    "answers": [
+      {
+        "text": "Cảm giác đau, mỏi và tê bì tay chân",
+        "correct": true
+      },
+      {
+        "text": "Đau đầu và chóng mặt",
+        "correct": false
+      },
+      {
+        "text": "Đau bụng và tiêu chảy",
+        "correct": false
+      },
+      {
+        "text": "Mệt mỏi và khó thở",
         "correct": false
       }
     ]
@@ -4396,60 +4423,6 @@
       },
       {
         "text": "Viên chức làm việc tại các cơ sở tư nhân.",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "5 món ăn nhẹ giàu omega 3 giúp trẻ thông minh",
-    "content": "Bài viết giới thiệu 5 món ăn nhẹ giàu omega 3 giúp trẻ thông minh, bao gồm hạt óc chó, trứng, quả bơ, đậu nành và hạt chia. Những thực phẩm này không chỉ cung cấp omega 3 mà còn bổ sung protein, vitamin và khoáng chất cần thiết cho sự phát triển của não bộ trẻ. Hạt óc chó và trứng giúp cải thiện chức năng ghi nhớ, trong khi đậu nành và hạt chia hỗ trợ tăng trưởng và sức khỏe tổng thể. Quả bơ cũng tăng cường miễn dịch cho trẻ nhờ vào các vitamin có trong nó.",
-    "link": "https://vnexpress.net/5-mon-an-nhe-giau-omega-3-giup-tre-thong-minh-4862685.html",
-    "cat": "giao-duc",
-    "positivity": 9,
-    "importance": 8,
-    "question": "Những món ăn nào giàu omega 3 giúp trẻ thông minh?",
-    "answers": [
-      {
-        "text": "Hạt óc chó, trứng, quả bơ, đậu nành, hạt chia",
-        "correct": true
-      },
-      {
-        "text": "Chả cá, thịt bò, rau sống, cơm",
-        "correct": false
-      },
-      {
-        "text": "Sữa, bánh mì, nước ngọt, trái cây",
-        "correct": false
-      },
-      {
-        "text": "Mỳ tôm, xúc xích, khoai tây chiên, chè",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Cuộc gặp bí mật giữa Deschamps và Mbappe",
-    "content": "Cuộc gặp bí mật giữa HLV Didier Deschamps và tiền đạo Kylian Mbappe diễn ra tại Madrid nhằm khẳng định sự ủng hộ của Deschamps dành cho Mbappe giữa những chỉ trích. Sau khi Mbappe không tham gia hai đợt tập trung đội tuyển vào tháng 10 và 11/2024, Deschamps đã hỏi về tình hình thi đấu của anh tại Real Madrid và khẳng định Mbappe vẫn là đội trưởng của tuyển Pháp. Dù có khởi đầu khó khăn tại Real, Mbappe đã cải thiện phong độ và ghi 31 bàn sau 44 trận.",
-    "link": "https://vnexpress.net/cuoc-gap-bi-mat-giua-deschamps-va-mbappe-4862661.html",
-    "cat": "the-thao",
-    "positivity": 7,
-    "importance": 8,
-    "question": "Deschamps đã gặp Mbappe để làm gì?",
-    "answers": [
-      {
-        "text": "Khẳng định sự ủng hộ dành cho Mbappe",
-        "correct": true
-      },
-      {
-        "text": "Yêu cầu Mbappe chơi tốt hơn",
-        "correct": false
-      },
-      {
-        "text": "Thảo luận về khả năng chuyển nhượng",
-        "correct": false
-      },
-      {
-        "text": "Nói về kế hoạch của đội tuyển Pháp",
         "correct": false
       }
     ]
