Batch update of generated files

--- a/home_shortnews.html
+++ b/home_shortnews.html
@@ -81,6 +81,33 @@
     // Example JSON array with news objects
     const newsData = [
   {
+    "title": "Sản xuất sản phẩm xanh theo nhu cầu người tiêu dùng",
+    "content": "Tiêu dùng xanh đang trở thành xu hướng quan trọng trong chiến lược kinh doanh của nhiều doanh nghiệp, nhờ vào sự thay đổi trong thói quen mua sắm của người tiêu dùng. Ngày càng nhiều người chọn các sản phẩm thân thiện với môi trường, từ thực phẩm đến sản phẩm tiêu dùng hàng ngày. Các doanh nghiệp cũng đã chuyển đổi sang sử dụng nguyên liệu xanh và sản phẩm bền vững để đáp ứng nhu cầu này, đồng thời tham gia tích cực vào các phong trào bảo vệ môi trường.",
+    "link": "https://tuoitre.vn/san-xuat-san-pham-xanh-theo-nhu-cau-nguoi-tieu-dung-20250319000048729.htm",
+    "cat": "kinh-doanh",
+    "positivity": 8,
+    "importance": 9,
+    "question": "Tại sao tiêu dùng xanh lại quan trọng với người tiêu dùng hiện nay?",
+    "answers": [
+      {
+        "text": "Người tiêu dùng ưu tiên các sản phẩm thân thiện với môi trường.",
+        "correct": true
+      },
+      {
+        "text": "Sản phẩm xanh thường rẻ hơn sản phẩm thông thường.",
+        "correct": false
+      },
+      {
+        "text": "Người tiêu dùng không quan tâm đến chất lượng sản phẩm.",
+        "correct": false
+      },
+      {
+        "text": "Tất cả sản phẩm đều phải có nhãn hiệu nổi tiếng.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Hãng ô tô Audi cắt giảm hàng nghìn việc làm ở Đức",
     "content": "Hãng ô tô Audi đã quyết định cắt giảm 7.500 việc làm tại Đức, tương đương 8% lực lượng lao động toàn cầu của hãng, nhằm đối phó với những thách thức trong ngành ô tô hiện nay, bao gồm nhu cầu chậm lại đối với xe điện và sự cạnh tranh gia tăng. Quyết định này dự kiến sẽ được thực hiện vào cuối năm 2029 thông qua các hình thức sa thải tự nguyện và chấm dứt hợp đồng. Chủ tịch Audi cũng nhấn mạnh rằng sẽ không có sa thải bắt buộc cho đến năm 2033, nhằm bảo đảm việc làm cho nhân viên trong bối cảnh kinh tế khó khăn.",
     "link": "https://tuoitre.vn/hang-o-to-audi-cat-giam-hang-nghin-viec-lam-o-duc-20250318171943316.htm",
