--- a/home.html
+++ b/home.html
@@ -233,6 +233,33 @@
     ]
   },
   {
+    "title": "Đau lưng có phải triệu chứng bệnh thần kinh?",
+    "content": "Đau lưng thường được cho là do các vấn đề liên quan đến xương khớp. Tuy nhiên, trong một số trường hợp, tình trạng này có thể là triệu chứng của tổn thương dây thần kinh. Do đó, cần chú ý đến các dấu hiệu và triệu chứng kèm theo để xác định nguyên nhân chính xác hơn.",
+    "link": "https://vnexpress.net/dau-lung-co-phai-trieu-chung-benh-than-kinh-4863101.html",
+    "cat": "suc-khoe",
+    "positivity": 7,
+    "importance": 6,
+    "question": "Đau lưng có phải là triệu chứng của bệnh thần kinh không?",
+    "answers": [
+      {
+        "text": "Có, đau lưng có thể là triệu chứng của bệnh thần kinh.",
+        "correct": true
+      },
+      {
+        "text": "Không, đau lưng chỉ do xương khớp.",
+        "correct": false
+      },
+      {
+        "text": "Đau lưng không liên quan đến thần kinh.",
+        "correct": false
+      },
+      {
+        "text": "Đau lưng chỉ là vấn đề tạm thời.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Thái Lan: 100.000 người làm việc trong các ổ lửa đảo ở Myanmar",
     "content": "Theo cảnh sát Thái Lan, khoảng 100.000 người vẫn đang làm việc tại các trung tâm lừa đảo ven biên giới Thái Lan - Myanmar, mặc dù đã có chiến dịch truy quét kéo dài nhiều tuần. Nhiều nạn nhân đã tự nguyện đến đây tìm việc, trong khi một số khác bị lừa hoặc bắt cóc. Các trung tâm lừa đảo này hoạt động mạnh mẽ, đặc biệt là sau vụ việc bắt cóc một diễn viên Trung Quốc. Cảnh sát Thái Lan đang nỗ lực triệt phá các tổ chức lừa đảo này và hỗ trợ hồi hương cho các nạn nhân.",
     "link": "https://dantri.com.vn/the-gioi/thai-lan-100000-nguoi-lam-viec-trong-cac-o-lua-dao-o-myanmar-20250319104135943.htm",
@@ -1566,28 +1593,28 @@
     ]
   },
   {
-    "title": "Hơn thập kỷ vô sinh do biến chứng đái tháo đường",
-    "content": "Anh Tiến, 47 tuổi, đã phải sống với tình trạng vô sinh suốt 12 năm do biến chứng đái tháo đường, dẫn đến rối loạn cương và không có tinh trùng. Sau khi điều trị tại các cơ sở y tế ở Mỹ mà không thành công, anh đã trở về Việt Nam để thực hiện phương pháp thụ tinh ống nghiệm tại IVF Tâm Anh TP HCM. Dù gặp khó khăn trong việc xuất tinh, bác sĩ vẫn tìm ra tinh trùng trong nước tiểu và áp dụng phương pháp TESE để thu tinh trùng cho quá trình thụ tinh ống nghiệm, với kết quả khả quan.",
-    "link": "https://vnexpress.net/hon-thap-ky-vo-sinh-do-bien-chung-dai-thao-duong-4862993.html",
+    "title": "Bạch cầu tăng gấp 20 lần do ung thư máu nhưng không triệu chứng",
+    "content": "Anh Mạnh, 32 tuổi, đã phát hiện bệnh ung thư máu khi đi khám sức khỏe vì thừa cân. Kết quả xét nghiệm cho thấy lượng bạch cầu của anh tăng gấp 20 lần so với mức bình thường, điều này là dấu hiệu cho thấy bệnh đang tiến triển mà không có triệu chứng rõ ràng. Các bác sĩ đã xác định anh mắc bạch cầu cấp loại M4, một dạng ung thư máu nguy hiểm, và đang tiến hành điều trị tích cực nhằm giảm số lượng bạch cầu và ngăn chặn sự phát triển của tế bào ác tính.",
+    "link": "https://vnexpress.net/bach-cau-tang-gap-20-lan-do-ung-thu-mau-nhung-khong-trieu-chung-4862874.html",
     "cat": "suc-khoe",
-    "positivity": 7,
+    "positivity": 3,
     "importance": 8,
-    "question": "Anh Tiến đã bị vô sinh do nguyên nhân gì?",
+    "question": "Tại sao bạch cầu của anh Mạnh lại tăng cao đến 20 lần?",
     "answers": [
       {
-        "text": "Biến chứng đái tháo đường",
+        "text": "Vì anh Mạnh mắc ung thư máu.",
         "correct": true
       },
       {
-        "text": "Thiếu hoạt động thể chất",
+        "text": "Vì anh Mạnh bị nhiễm virus.",
         "correct": false
       },
       {
-        "text": "Chế độ ăn uống kém",
+        "text": "Vì anh Mạnh ăn uống không điều độ.",
         "correct": false
       },
       {
-        "text": "Căng thẳng tâm lý",
+        "text": "Vì anh Mạnh thường xuyên tập thể dục.",
         "correct": false
       }
     ]
@@ -1620,28 +1647,28 @@
     ]
   },
   {
-    "title": "Bạch cầu tăng gấp 20 lần do ung thư máu nhưng không triệu chứng",
-    "content": "Anh Mạnh, 32 tuổi, đã phát hiện bệnh ung thư máu khi đi khám sức khỏe vì thừa cân. Kết quả xét nghiệm cho thấy lượng bạch cầu của anh tăng gấp 20 lần so với mức bình thường, điều này là dấu hiệu cho thấy bệnh đang tiến triển mà không có triệu chứng rõ ràng. Các bác sĩ đã xác định anh mắc bạch cầu cấp loại M4, một dạng ung thư máu nguy hiểm, và đang tiến hành điều trị tích cực nhằm giảm số lượng bạch cầu và ngăn chặn sự phát triển của tế bào ác tính.",
-    "link": "https://vnexpress.net/bach-cau-tang-gap-20-lan-do-ung-thu-mau-nhung-khong-trieu-chung-4862874.html",
+    "title": "Hơn thập kỷ vô sinh do biến chứng đái tháo đường",
+    "content": "Anh Tiến, 47 tuổi, đã phải sống với tình trạng vô sinh suốt 12 năm do biến chứng đái tháo đường, dẫn đến rối loạn cương và không có tinh trùng. Sau khi điều trị tại các cơ sở y tế ở Mỹ mà không thành công, anh đã trở về Việt Nam để thực hiện phương pháp thụ tinh ống nghiệm tại IVF Tâm Anh TP HCM. Dù gặp khó khăn trong việc xuất tinh, bác sĩ vẫn tìm ra tinh trùng trong nước tiểu và áp dụng phương pháp TESE để thu tinh trùng cho quá trình thụ tinh ống nghiệm, với kết quả khả quan.",
+    "link": "https://vnexpress.net/hon-thap-ky-vo-sinh-do-bien-chung-dai-thao-duong-4862993.html",
     "cat": "suc-khoe",
-    "positivity": 3,
+    "positivity": 7,
     "importance": 8,
-    "question": "Tại sao bạch cầu của anh Mạnh lại tăng cao đến 20 lần?",
+    "question": "Anh Tiến đã bị vô sinh do nguyên nhân gì?",
     "answers": [
       {
-        "text": "Vì anh Mạnh mắc ung thư máu.",
+        "text": "Biến chứng đái tháo đường",
         "correct": true
       },
       {
-        "text": "Vì anh Mạnh bị nhiễm virus.",
+        "text": "Thiếu hoạt động thể chất",
         "correct": false
       },
       {
-        "text": "Vì anh Mạnh ăn uống không điều độ.",
+        "text": "Chế độ ăn uống kém",
         "correct": false
       },
       {
-        "text": "Vì anh Mạnh thường xuyên tập thể dục.",
+        "text": "Căng thẳng tâm lý",
         "correct": false
       }
     ]
@@ -3123,37 +3150,6 @@
     ]
   },
   {
-    "title": "6 dưỡng chất cần thiết để duy trì sức khỏe",
-    "content": "Bài viết trình bày về 6 dưỡng chất cần thiết để duy trì sức khỏe, bao gồm vitamin C, D, E, kẽm và các chất chống oxy hóa. Những dưỡng chất này đóng vai trò quan trọng trong việc tăng cường hệ miễn dịch, bảo vệ cơ thể khỏi các tác nhân gây bệnh, đặc biệt trong thời tiết thay đổi. Ngoài việc đảm bảo chế độ ăn uống đầy đủ các dưỡng chất này, lối sống lành mạnh với tập thể dục, kiểm soát căng thẳng và ngủ đủ giấc cũng rất cần thiết để duy trì sức khỏe.",
-    "link": "https://vnexpress.net/6-duong-chat-can-thiet-de-duy-tri-suc-khoe-4862638.html",
-    "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 9,
-    "question": "Những dưỡng chất nào cần thiết để duy trì sức khỏe?",
-    "answers": [
-      {
-        "text": "Vitamin C, D, E, kẽm và chất chống oxy hóa",
-        "correct": true
-      },
-      {
-        "text": "Chất béo bão hòa",
-        "correct": false
-      },
-      {
-        "text": "Carbohydrate đơn giản",
-        "correct": false
-      },
-      {
-        "text": "Chất xơ hòa tan",
-        "correct": false
-      },
-      {
-        "text": "Protein động vật",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "4 điều cần biết về cơn ho",
     "content": "Cơn ho là phản xạ tự nhiên giúp làm sạch đường hô hấp, thường kéo dài không quá hai tuần. Nếu ho dai dẳng hơn ba tuần, có thể do bệnh lý nghiêm trọng như nhiễm trùng, trào ngược dạ dày thực quản hoặc hen suyễn. Để phòng ngừa và giảm ho, việc uống đủ nước, thay đổi chế độ ăn uống và bỏ thuốc lá là rất quan trọng. Ngoài ra, rửa tay thường xuyên và tránh tiếp xúc với người bệnh cũng giúp giảm nguy cơ mắc bệnh.",
     "link": "https://vnexpress.net/4-dieu-can-biet-ve-con-ho-4862670.html",
@@ -3176,6 +3172,33 @@
       },
       {
         "text": "Ho không liên quan đến việc uống nước.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "\"Vovinam Dance\": Kết hợp võ thuật với vũ đạo, sân chơi mới cho giới trẻ",
+    "content": "Cuộc thi \"Vovinam Dance 2025\" vừa được tổ chức tại Hà Nội, do Đài PT-TH Hà Nội và Liên đoàn Vovinam Việt Nam phối hợp thực hiện. Đây là sự kiện kết hợp giữa võ thuật và nghệ thuật, nhằm tôn vinh kỷ niệm 50 năm Ngày Giải phóng miền Nam và 80 năm Quốc khánh Việt Nam. Cuộc thi không chỉ là sân chơi cho các võ sinh và vũ công mà còn là cơ hội để quảng bá văn hóa Vovinam ra thế giới, với tổng giải thưởng lên tới 550 triệu đồng.",
+    "link": "https://dantri.com.vn/giai-tri/vovinam-dance-ket-hop-vo-thuat-voi-vu-dao-san-choi-moi-cho-gioi-tre-20250318203314904.htm",
+    "cat": "the-thao",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Cuộc thi Vovinam Dance 2025 được tổ chức nhằm mục đích gì?",
+    "answers": [
+      {
+        "text": "Tôn vinh văn hóa và nghệ thuật Vovinam",
+        "correct": true
+      },
+      {
+        "text": "Tạo ra một môn thể thao mới",
+        "correct": false
+      },
+      {
+        "text": "Giới thiệu võ thuật của các nước khác",
+        "correct": false
+      },
+      {
+        "text": "Tổ chức giải thưởng cho các môn thể thao khác",
         "correct": false
       }
     ]
@@ -3208,28 +3231,32 @@
     ]
   },
   {
-    "title": "\"Vovinam Dance\": Kết hợp võ thuật với vũ đạo, sân chơi mới cho giới trẻ",
-    "content": "Cuộc thi \"Vovinam Dance 2025\" vừa được tổ chức tại Hà Nội, do Đài PT-TH Hà Nội và Liên đoàn Vovinam Việt Nam phối hợp thực hiện. Đây là sự kiện kết hợp giữa võ thuật và nghệ thuật, nhằm tôn vinh kỷ niệm 50 năm Ngày Giải phóng miền Nam và 80 năm Quốc khánh Việt Nam. Cuộc thi không chỉ là sân chơi cho các võ sinh và vũ công mà còn là cơ hội để quảng bá văn hóa Vovinam ra thế giới, với tổng giải thưởng lên tới 550 triệu đồng.",
-    "link": "https://dantri.com.vn/giai-tri/vovinam-dance-ket-hop-vo-thuat-voi-vu-dao-san-choi-moi-cho-gioi-tre-20250318203314904.htm",
-    "cat": "the-thao",
+    "title": "6 dưỡng chất cần thiết để duy trì sức khỏe",
+    "content": "Bài viết trình bày về 6 dưỡng chất cần thiết để duy trì sức khỏe, bao gồm vitamin C, D, E, kẽm và các chất chống oxy hóa. Những dưỡng chất này đóng vai trò quan trọng trong việc tăng cường hệ miễn dịch, bảo vệ cơ thể khỏi các tác nhân gây bệnh, đặc biệt trong thời tiết thay đổi. Ngoài việc đảm bảo chế độ ăn uống đầy đủ các dưỡng chất này, lối sống lành mạnh với tập thể dục, kiểm soát căng thẳng và ngủ đủ giấc cũng rất cần thiết để duy trì sức khỏe.",
+    "link": "https://vnexpress.net/6-duong-chat-can-thiet-de-duy-tri-suc-khoe-4862638.html",
+    "cat": "suc-khoe",
     "positivity": 8,
-    "importance": 7,
-    "question": "Cuộc thi Vovinam Dance 2025 được tổ chức nhằm mục đích gì?",
+    "importance": 9,
+    "question": "Những dưỡng chất nào cần thiết để duy trì sức khỏe?",
     "answers": [
       {
-        "text": "Tôn vinh văn hóa và nghệ thuật Vovinam",
+        "text": "Vitamin C, D, E, kẽm và chất chống oxy hóa",
         "correct": true
       },
       {
-        "text": "Tạo ra một môn thể thao mới",
+        "text": "Chất béo bão hòa",
         "correct": false
       },
       {
-        "text": "Giới thiệu võ thuật của các nước khác",
+        "text": "Carbohydrate đơn giản",
         "correct": false
       },
       {
-        "text": "Tổ chức giải thưởng cho các môn thể thao khác",
+        "text": "Chất xơ hòa tan",
+        "correct": false
+      },
+      {
+        "text": "Protein động vật",
         "correct": false
       }
     ]
@@ -3958,6 +3985,33 @@
     ]
   },
   {
+    "title": "Hai cách đỗ xe cơ bản cho tài xế mới",
+    "content": "Bài viết trình bày hai cách đỗ xe cơ bản cho tài xế mới, bao gồm đỗ xe ghép ngang và ghép dọc. Đối với đỗ xe ghép ngang, tài xế cần chọn vị trí đỗ dài hơn xe và thực hiện các thao tác đánh lái để đỗ xe an toàn. Còn đối với đỗ xe ghép dọc, tài xế chỉ cần lùi xe vào chỗ trống đã chọn, đồng thời bật đèn cảnh báo và quan sát kỹ để tránh va chạm. Luyện tập thường xuyên và sử dụng các thiết bị hỗ trợ như gương chiếu hậu và camera sẽ giúp tài xế nâng cao kỹ năng đỗ xe.",
+    "link": "https://vnexpress.net/hai-cach-do-xe-co-ban-cho-tai-xe-moi-4861253.html",
+    "cat": "oto-xe-may",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Hai cách đỗ xe cơ bản cho tài xế mới là gì?",
+    "answers": [
+      {
+        "text": "Đỗ xe ghép ngang và ghép dọc",
+        "correct": true
+      },
+      {
+        "text": "Đỗ xe song song và đỗ xe chéo",
+        "correct": false
+      },
+      {
+        "text": "Đỗ xe nhanh và đỗ xe chậm",
+        "correct": false
+      },
+      {
+        "text": "Đỗ xe một chiều và đỗ xe hai chiều",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Giảm 11 kg, giảm bệnh nền",
     "content": "Chị Hà, 31 tuổi, đã giảm 11 kg sau khi điều trị béo phì tại Bệnh viện Đa khoa Tâm Anh TP HCM, giúp cải thiện tình trạng rối loạn kinh nguyệt và gan nhiễm mỡ. Khi bắt đầu, chị nặng gần 90 kg và mắc nhiều bệnh liên quan đến béo phì. Sau hai tháng áp dụng liệu trình giảm cân kết hợp thuốc và chế độ ăn uống hợp lý, sức khỏe của chị đã cải thiện rõ rệt, chu kỳ kinh nguyệt trở lại bình thường và các chỉ số sức khỏe cải thiện.",
     "link": "https://vnexpress.net/giam-11-kg-giam-benh-nen-4862793.html",
@@ -3984,33 +4038,6 @@
       },
       {
         "text": "8 kg, sức khỏe tệ hơn",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Hai cách đỗ xe cơ bản cho tài xế mới",
-    "content": "Bài viết trình bày hai cách đỗ xe cơ bản cho tài xế mới, bao gồm đỗ xe ghép ngang và ghép dọc. Đối với đỗ xe ghép ngang, tài xế cần chọn vị trí đỗ dài hơn xe và thực hiện các thao tác đánh lái để đỗ xe an toàn. Còn đối với đỗ xe ghép dọc, tài xế chỉ cần lùi xe vào chỗ trống đã chọn, đồng thời bật đèn cảnh báo và quan sát kỹ để tránh va chạm. Luyện tập thường xuyên và sử dụng các thiết bị hỗ trợ như gương chiếu hậu và camera sẽ giúp tài xế nâng cao kỹ năng đỗ xe.",
-    "link": "https://vnexpress.net/hai-cach-do-xe-co-ban-cho-tai-xe-moi-4861253.html",
-    "cat": "oto-xe-may",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Hai cách đỗ xe cơ bản cho tài xế mới là gì?",
-    "answers": [
-      {
-        "text": "Đỗ xe ghép ngang và ghép dọc",
-        "correct": true
-      },
-      {
-        "text": "Đỗ xe song song và đỗ xe chéo",
-        "correct": false
-      },
-      {
-        "text": "Đỗ xe nhanh và đỗ xe chậm",
-        "correct": false
-      },
-      {
-        "text": "Đỗ xe một chiều và đỗ xe hai chiều",
         "correct": false
       }
     ]
@@ -4529,60 +4556,6 @@
       },
       {
         "text": "Một bộ vest công sở",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Bị ung thư đại tràng có nên kiêng rau củ?",
-    "content": "Bài viết đề cập đến việc người bệnh ung thư đại tràng có nên kiêng rau củ hay không. Theo các chuyên gia, người bệnh nên có chế độ ăn uống cân bằng và đa dạng, bao gồm cả rau củ để cung cấp vitamin và khoáng chất cần thiết. Tuy nhiên, trong một số trường hợp như tắc ruột hoặc tiêu chảy kéo dài, cần hạn chế thực phẩm chứa chất xơ và ưu tiên rau củ mềm, nấu chín kỹ để dễ tiêu hóa. Bác sĩ dinh dưỡng cũng có thể tư vấn chế độ ăn phù hợp theo tình trạng cụ thể của từng bệnh nhân.",
-    "link": "https://vnexpress.net/bi-ung-thu-dai-trang-co-nen-kieng-rau-cu-4862655.html",
-    "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 9,
-    "question": "Người bệnh ung thư đại tràng có nên ăn rau củ không?",
-    "answers": [
-      {
-        "text": "Có, họ nên ăn rau củ để cung cấp dinh dưỡng cần thiết.",
-        "correct": true
-      },
-      {
-        "text": "Không, rau củ hoàn toàn không nên ăn.",
-        "correct": false
-      },
-      {
-        "text": "Chỉ nên ăn rau củ khi không có triệu chứng gì.",
-        "correct": false
-      },
-      {
-        "text": "Có thể ăn rau củ nhưng chỉ nên ăn sống.",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Điều trị u gan trên nền xơ gan thế nào?",
-    "content": "Bài viết đề cập đến việc điều trị u gan ở người bệnh xơ gan, cụ thể là trường hợp người bệnh phát hiện nhiều khối u gan và viêm gan virus B. Phương pháp điều trị sẽ phụ thuộc vào kích thước và vị trí của khối u, có thể bao gồm nút mạch hoặc phẫu thuật. Đối với khối u nhỏ, có thể sử dụng đốt sóng cao tần hoặc tiêm cồn. Tuy nhiên, đối với người mắc viêm gan virus B, cần thận trọng vì có thể gây ra suy gan nhanh chóng.",
-    "link": "https://vnexpress.net/dieu-tri-u-gan-tren-nen-xo-gan-the-nao-4862660.html",
-    "cat": "suc-khoe",
-    "positivity": 6,
-    "importance": 8,
-    "question": "Làm thế nào để điều trị u gan trên nền xơ gan?",
-    "answers": [
-      {
-        "text": "Có thể điều trị bằng phương pháp nút mạch",
-        "correct": true
-      },
-      {
-        "text": "Chỉ có thể phẫu thuật",
-        "correct": false
-      },
-      {
-        "text": "Không có phương pháp điều trị nào",
-        "correct": false
-      },
-      {
-        "text": "Dùng thuốc truyền thống để chữa trị",
         "correct": false
       }
     ]
