--- a/home_shortnews.html
+++ b/home_shortnews.html
@@ -81,6 +81,37 @@
     // Example JSON array with news objects
     const newsData = [
   {
+    "title": "Báo Indonesia nêu 3 lý do đánh bại Australia",
+    "content": "Báo SindoNews của Indonesia đã nêu ra ba lý do giúp đội tuyển Indonesia có khả năng đánh bại Australia trong trận đấu vòng loại World Cup 2026. Đầu tiên là sự dẫn dắt của HLV Patrick Kluivert với triết lý tấn công mới mẻ. Thứ hai, đội hình Indonesia đã được cải thiện đáng kể với sự góp mặt của nhiều cầu thủ nhập tịch chất lượng. Cuối cùng, tinh thần và quyết tâm cao của các cầu thủ là yếu tố quan trọng giúp họ tự tin trong cuộc đối đầu với Australia.",
+    "link": "https://vnexpress.net/bao-indonesia-neu-3-ly-do-danh-bai-australia-4863252.html",
+    "cat": "the-thao",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Tại sao Indonesia có khả năng đánh bại Australia trong vòng loại World Cup?",
+    "answers": [
+      {
+        "text": "HLV Kluivert và cầu thủ nhập tịch tạo sức mạnh cho đội",
+        "correct": true
+      },
+      {
+        "text": "Australia có lợi thế sân nhà",
+        "correct": false
+      },
+      {
+        "text": "Indonesia chưa bao giờ tham dự World Cup",
+        "correct": false
+      },
+      {
+        "text": "Australia đang gặp khó khăn ở vòng loại",
+        "correct": false
+      },
+      {
+        "text": "Indonesia đứng thứ 127 trên bảng xếp hạng FIFA",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Tổ chức của Djokovic kiện ATP tham nhũng",
     "content": "Tổ chức của Novak Djokovic, Hiệp hội Quần vợt chuyên nghiệp (PTPA), đã đệ đơn kiện các cơ quan quản lý quần vợt gồm ATP, WTA và ITF vì cáo buộc tham nhũng và lạm dụng quyền lực. Vụ kiện này được sự ủng hộ của hơn 250 tay vợt hàng đầu, nhấn mạnh sự cần thiết phải cải cách trong cách phân chia tiền thưởng và lịch thi đấu. PTPA cho rằng các tay vợt đang phải chịu đựng một hệ thống bất công và kêu gọi một môi trường thi đấu công bằng hơn.",
     "link": "https://vnexpress.net/to-chuc-cua-djokovic-kien-atp-tham-nhung-4863256.html",
@@ -139,6 +170,33 @@
     ]
   },
   {
+    "title": "Đau lưng có phải triệu chứng bệnh thần kinh?",
+    "content": "Đau lưng thường được cho là do các vấn đề liên quan đến xương khớp. Tuy nhiên, trong một số trường hợp, tình trạng này có thể là triệu chứng của tổn thương dây thần kinh. Do đó, cần chú ý đến các dấu hiệu và triệu chứng kèm theo để xác định nguyên nhân chính xác hơn.",
+    "link": "https://vnexpress.net/dau-lung-co-phai-trieu-chung-benh-than-kinh-4863101.html",
+    "cat": "suc-khoe",
+    "positivity": 7,
+    "importance": 6,
+    "question": "Đau lưng có phải là triệu chứng của bệnh thần kinh không?",
+    "answers": [
+      {
+        "text": "Có, đau lưng có thể là triệu chứng của bệnh thần kinh.",
+        "correct": true
+      },
+      {
+        "text": "Không, đau lưng chỉ do xương khớp.",
+        "correct": false
+      },
+      {
+        "text": "Đau lưng không liên quan đến thần kinh.",
+        "correct": false
+      },
+      {
+        "text": "Đau lưng chỉ là vấn đề tạm thời.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Hãng ô tô Audi cắt giảm hàng nghìn việc làm ở Đức",
     "content": "Hãng ô tô Audi đã quyết định cắt giảm 7.500 việc làm tại Đức, tương đương 8% lực lượng lao động toàn cầu của hãng, nhằm đối phó với những thách thức trong ngành ô tô hiện nay, bao gồm nhu cầu chậm lại đối với xe điện và sự cạnh tranh gia tăng. Quyết định này dự kiến sẽ được thực hiện vào cuối năm 2029 thông qua các hình thức sa thải tự nguyện và chấm dứt hợp đồng. Chủ tịch Audi cũng nhấn mạnh rằng sẽ không có sa thải bắt buộc cho đến năm 2033, nhằm bảo đảm việc làm cho nhân viên trong bối cảnh kinh tế khó khăn.",
     "link": "https://tuoitre.vn/hang-o-to-audi-cat-giam-hang-nghin-viec-lam-o-duc-20250318171943316.htm",
@@ -166,28 +224,28 @@
     ]
   },
   {
-    "title": "Đau lưng có phải triệu chứng bệnh thần kinh?",
-    "content": "Đau lưng thường được cho là do các vấn đề liên quan đến xương khớp. Tuy nhiên, trong một số trường hợp, tình trạng này có thể là triệu chứng của tổn thương dây thần kinh. Do đó, cần chú ý đến các dấu hiệu và triệu chứng kèm theo để xác định nguyên nhân chính xác hơn.",
-    "link": "https://vnexpress.net/dau-lung-co-phai-trieu-chung-benh-than-kinh-4863101.html",
-    "cat": "suc-khoe",
-    "positivity": 7,
-    "importance": 6,
-    "question": "Đau lưng có phải là triệu chứng của bệnh thần kinh không?",
+    "title": "Ngôi trường đặc biệt với bài diễn văn lịch sử 75 năm trước",
+    "content": "Vào ngày 19/3/2025, Trường THPT Ten Lơ Man, TPHCM tổ chức lễ kỷ niệm 75 năm bài diễn văn lịch sử của cố luật sư Nguyễn Hữu Thọ, trong đó ông lên án tội ác của thực dân Pháp. Bài diễn văn không chỉ kêu gọi tinh thần đoàn kết của nhân dân mà còn đánh dấu bước ngoặt trong phong trào đấu tranh giành độc lập tại miền Nam. Lễ kỷ niệm nhấn mạnh vai trò của trường trong việc giáo dục và bồi dưỡng nhiều thế hệ học sinh ưu tú, góp phần vào sự phát triển của thành phố và đất nước.",
+    "link": "https://dantri.com.vn/giao-duc/ngoi-truong-dac-biet-voi-bai-dien-van-lich-su-75-nam-truoc-20250319102623625.htm",
+    "cat": "giao-duc",
+    "positivity": 9,
+    "importance": 8,
+    "question": "Bài diễn văn lịch sử nào được đọc tại Trường THPT Ten Lơ Man cách đây 75 năm?",
     "answers": [
       {
-        "text": "Có, đau lưng có thể là triệu chứng của bệnh thần kinh.",
+        "text": "Bài diễn văn của cố luật sư Nguyễn Hữu Thọ",
         "correct": true
       },
       {
-        "text": "Không, đau lưng chỉ do xương khớp.",
+        "text": "Bài diễn văn của Tổng thống Mỹ",
         "correct": false
       },
       {
-        "text": "Đau lưng không liên quan đến thần kinh.",
+        "text": "Bài diễn văn của một nhà thơ nổi tiếng",
         "correct": false
       },
       {
-        "text": "Đau lưng chỉ là vấn đề tạm thời.",
+        "text": "Bài diễn văn của một chính trị gia nước ngoài",
         "correct": false
       }
     ]
@@ -1020,33 +1078,6 @@
     ]
   },
   {
-    "title": "Chơi tung hứng với bố, bé một tuổi gãy xương đùi",
-    "content": "Trong một vụ tai nạn đáng tiếc, một bé trai một tuổi đã bị gãy xương đùi khi chơi tung hứng với bố. Sau khi nhập viện với tình trạng đau đớn và sợ hãi, bé được bác sĩ tiến hành bó bột toàn thân để ổn định xương gãy. Bác sĩ khuyến cáo rằng các trò chơi mạnh có thể gây hại cho trẻ nhỏ, không chỉ làm gãy xương mà còn ảnh hưởng đến hệ thần kinh của trẻ.",
-    "link": "https://vnexpress.net/choi-tung-hung-voi-bo-be-mot-tuoi-gay-xuong-dui-4862991.html",
-    "cat": "gia-dinh",
-    "positivity": 3,
-    "importance": 7,
-    "question": "Tại sao bé một tuổi bị gãy xương đùi khi chơi tung hứng với bố?",
-    "answers": [
-      {
-        "text": "Bé bị gãy xương do chơi tung hứng với bố.",
-        "correct": true
-      },
-      {
-        "text": "Bé bị ngã trong khi chơi đùa.",
-        "correct": false
-      },
-      {
-        "text": "Bé bị tai nạn khi chạy nhảy.",
-        "correct": false
-      },
-      {
-        "text": "Bé bị va chạm với đồ vật trong nhà.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Trẻ rụng tóc do thiếu chất gì?",
     "content": "Trẻ bị rụng tóc có thể do thiếu hụt nhiều loại vitamin và khoáng chất thiết yếu như vitamin B, C, D, sắt, kẽm và selen trong chế độ dinh dưỡng hàng ngày. Thiếu dinh dưỡng có thể dẫn đến tình trạng tóc rụng nhiều hơn 100 sợi mỗi ngày, tóc yếu và dễ gãy. Bác sĩ Trần Thị Trà Phương đã nhấn mạnh tầm quan trọng của việc bổ sung các chất dinh dưỡng này để giúp tóc phát triển khỏe mạnh và ngăn ngừa rụng tóc ở trẻ em.",
     "link": "https://vnexpress.net/tre-rung-toc-do-thieu-chat-gi-4862999.html",
@@ -1073,6 +1104,33 @@
       },
       {
         "text": "Vitamin D và magie",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Chơi tung hứng với bố, bé một tuổi gãy xương đùi",
+    "content": "Trong một vụ tai nạn đáng tiếc, một bé trai một tuổi đã bị gãy xương đùi khi chơi tung hứng với bố. Sau khi nhập viện với tình trạng đau đớn và sợ hãi, bé được bác sĩ tiến hành bó bột toàn thân để ổn định xương gãy. Bác sĩ khuyến cáo rằng các trò chơi mạnh có thể gây hại cho trẻ nhỏ, không chỉ làm gãy xương mà còn ảnh hưởng đến hệ thần kinh của trẻ.",
+    "link": "https://vnexpress.net/choi-tung-hung-voi-bo-be-mot-tuoi-gay-xuong-dui-4862991.html",
+    "cat": "gia-dinh",
+    "positivity": 3,
+    "importance": 7,
+    "question": "Tại sao bé một tuổi bị gãy xương đùi khi chơi tung hứng với bố?",
+    "answers": [
+      {
+        "text": "Bé bị gãy xương do chơi tung hứng với bố.",
+        "correct": true
+      },
+      {
+        "text": "Bé bị ngã trong khi chơi đùa.",
+        "correct": false
+      },
+      {
+        "text": "Bé bị tai nạn khi chạy nhảy.",
+        "correct": false
+      },
+      {
+        "text": "Bé bị va chạm với đồ vật trong nhà.",
         "correct": false
       }
     ]
@@ -1526,28 +1584,28 @@
     ]
   },
   {
-    "title": "Bạch cầu tăng gấp 20 lần do ung thư máu nhưng không triệu chứng",
-    "content": "Anh Mạnh, 32 tuổi, đã phát hiện bệnh ung thư máu khi đi khám sức khỏe vì thừa cân. Kết quả xét nghiệm cho thấy lượng bạch cầu của anh tăng gấp 20 lần so với mức bình thường, điều này là dấu hiệu cho thấy bệnh đang tiến triển mà không có triệu chứng rõ ràng. Các bác sĩ đã xác định anh mắc bạch cầu cấp loại M4, một dạng ung thư máu nguy hiểm, và đang tiến hành điều trị tích cực nhằm giảm số lượng bạch cầu và ngăn chặn sự phát triển của tế bào ác tính.",
-    "link": "https://vnexpress.net/bach-cau-tang-gap-20-lan-do-ung-thu-mau-nhung-khong-trieu-chung-4862874.html",
+    "title": "Hơn thập kỷ vô sinh do biến chứng đái tháo đường",
+    "content": "Anh Tiến, 47 tuổi, đã phải sống với tình trạng vô sinh suốt 12 năm do biến chứng đái tháo đường, dẫn đến rối loạn cương và không có tinh trùng. Sau khi điều trị tại các cơ sở y tế ở Mỹ mà không thành công, anh đã trở về Việt Nam để thực hiện phương pháp thụ tinh ống nghiệm tại IVF Tâm Anh TP HCM. Dù gặp khó khăn trong việc xuất tinh, bác sĩ vẫn tìm ra tinh trùng trong nước tiểu và áp dụng phương pháp TESE để thu tinh trùng cho quá trình thụ tinh ống nghiệm, với kết quả khả quan.",
+    "link": "https://vnexpress.net/hon-thap-ky-vo-sinh-do-bien-chung-dai-thao-duong-4862993.html",
     "cat": "suc-khoe",
-    "positivity": 3,
+    "positivity": 7,
     "importance": 8,
-    "question": "Tại sao bạch cầu của anh Mạnh lại tăng cao đến 20 lần?",
+    "question": "Anh Tiến đã bị vô sinh do nguyên nhân gì?",
     "answers": [
       {
-        "text": "Vì anh Mạnh mắc ung thư máu.",
+        "text": "Biến chứng đái tháo đường",
         "correct": true
       },
       {
-        "text": "Vì anh Mạnh bị nhiễm virus.",
+        "text": "Thiếu hoạt động thể chất",
         "correct": false
       },
       {
-        "text": "Vì anh Mạnh ăn uống không điều độ.",
+        "text": "Chế độ ăn uống kém",
         "correct": false
       },
       {
-        "text": "Vì anh Mạnh thường xuyên tập thể dục.",
+        "text": "Căng thẳng tâm lý",
         "correct": false
       }
     ]
@@ -1580,28 +1638,28 @@
     ]
   },
   {
-    "title": "Hơn thập kỷ vô sinh do biến chứng đái tháo đường",
-    "content": "Anh Tiến, 47 tuổi, đã phải sống với tình trạng vô sinh suốt 12 năm do biến chứng đái tháo đường, dẫn đến rối loạn cương và không có tinh trùng. Sau khi điều trị tại các cơ sở y tế ở Mỹ mà không thành công, anh đã trở về Việt Nam để thực hiện phương pháp thụ tinh ống nghiệm tại IVF Tâm Anh TP HCM. Dù gặp khó khăn trong việc xuất tinh, bác sĩ vẫn tìm ra tinh trùng trong nước tiểu và áp dụng phương pháp TESE để thu tinh trùng cho quá trình thụ tinh ống nghiệm, với kết quả khả quan.",
-    "link": "https://vnexpress.net/hon-thap-ky-vo-sinh-do-bien-chung-dai-thao-duong-4862993.html",
+    "title": "Bạch cầu tăng gấp 20 lần do ung thư máu nhưng không triệu chứng",
+    "content": "Anh Mạnh, 32 tuổi, đã phát hiện bệnh ung thư máu khi đi khám sức khỏe vì thừa cân. Kết quả xét nghiệm cho thấy lượng bạch cầu của anh tăng gấp 20 lần so với mức bình thường, điều này là dấu hiệu cho thấy bệnh đang tiến triển mà không có triệu chứng rõ ràng. Các bác sĩ đã xác định anh mắc bạch cầu cấp loại M4, một dạng ung thư máu nguy hiểm, và đang tiến hành điều trị tích cực nhằm giảm số lượng bạch cầu và ngăn chặn sự phát triển của tế bào ác tính.",
+    "link": "https://vnexpress.net/bach-cau-tang-gap-20-lan-do-ung-thu-mau-nhung-khong-trieu-chung-4862874.html",
     "cat": "suc-khoe",
-    "positivity": 7,
+    "positivity": 3,
     "importance": 8,
-    "question": "Anh Tiến đã bị vô sinh do nguyên nhân gì?",
+    "question": "Tại sao bạch cầu của anh Mạnh lại tăng cao đến 20 lần?",
     "answers": [
       {
-        "text": "Biến chứng đái tháo đường",
+        "text": "Vì anh Mạnh mắc ung thư máu.",
         "correct": true
       },
       {
-        "text": "Thiếu hoạt động thể chất",
+        "text": "Vì anh Mạnh bị nhiễm virus.",
         "correct": false
       },
       {
-        "text": "Chế độ ăn uống kém",
+        "text": "Vì anh Mạnh ăn uống không điều độ.",
         "correct": false
       },
       {
-        "text": "Căng thẳng tâm lý",
+        "text": "Vì anh Mạnh thường xuyên tập thể dục.",
         "correct": false
       }
     ]
@@ -1951,28 +2009,28 @@
     ]
   },
   {
-    "title": "Phấn hoa - nỗi ám ảnh của người Việt ở nước ngoài",
-    "content": "Bài viết đề cập đến nỗi ám ảnh của người Việt Nam sống ở nước ngoài, đặc biệt là tại Nhật Bản, do dị ứng phấn hoa. Nhiều người như Văn Phong và Hồng Hạnh phải bỏ công việc tốt để trở về quê hương vì không thể chịu đựng được triệu chứng dị ứng nặng nề trong mùa xuân. Dị ứng phấn hoa ảnh hưởng nghiêm trọng đến sức khỏe và chất lượng cuộc sống của họ, với tỷ lệ người mắc bệnh ngày càng gia tăng.",
-    "link": "https://vnexpress.net/phan-hoa-noi-am-anh-cua-nguoi-viet-o-nuoc-ngoai-4861536.html",
-    "cat": "suc-khoe",
-    "positivity": 3,
+    "title": "Bắc thang gần 4 m vào nhà tại công trường Vành đai 3 TP HCM",
+    "content": "Nhiều hộ dân tại xa lộ Hà Nội, gần cầu vượt Tân Vạn, TP Dĩ An đang phải bắc thang cao gần 4 m để vào nhà do công trình Vành đai 3 TP HCM thi công, khiến mặt đường hạ thấp hơn so với nhà. Tình trạng này đã diễn ra từ cuối năm ngoái, gây khó khăn trong việc đi lại và buôn bán của người dân. Họ cho biết thu nhập giảm sút nghiêm trọng do công trường thi công, khiến khách hàng không còn ghé thăm như trước.",
+    "link": "https://vnexpress.net/bac-thang-gan-4-m-vao-nha-tai-cong-truong-vanh-dai-3-tp-hcm-4862463.html",
+    "cat": "thoi-su",
+    "positivity": 4,
     "importance": 7,
-    "question": "Dị ứng phấn hoa ảnh hưởng đến người Việt ở nước ngoài như thế nào?",
+    "question": "Tại sao nhiều hộ dân ở xa lộ Hà Nội phải bắc thang vào nhà?",
     "answers": [
       {
-        "text": "Nó khiến họ phải bỏ việc và trở về nước.",
+        "text": "Vì mặt đường công trình Vành đai 3 hạ thấp hơn nhà.",
         "correct": true
       },
       {
-        "text": "Nó không ảnh hưởng nhiều đến công việc.",
+        "text": "Do nhà bị giải tỏa một phần.",
         "correct": false
       },
       {
-        "text": "Người mắc dị ứng phấn hoa luôn khỏe mạnh.",
+        "text": "Vì họ muốn làm đẹp cho ngôi nhà.",
         "correct": false
       },
       {
-        "text": "Mọi người đều thích mùa xuân và không lo lắng.",
+        "text": "Do thời tiết xấu làm hỏng cầu thang.",
         "correct": false
       }
     ]
@@ -2036,28 +2094,28 @@
     ]
   },
   {
-    "title": "Bắc thang gần 4 m vào nhà tại công trường Vành đai 3 TP HCM",
-    "content": "Nhiều hộ dân tại xa lộ Hà Nội, gần cầu vượt Tân Vạn, TP Dĩ An đang phải bắc thang cao gần 4 m để vào nhà do công trình Vành đai 3 TP HCM thi công, khiến mặt đường hạ thấp hơn so với nhà. Tình trạng này đã diễn ra từ cuối năm ngoái, gây khó khăn trong việc đi lại và buôn bán của người dân. Họ cho biết thu nhập giảm sút nghiêm trọng do công trường thi công, khiến khách hàng không còn ghé thăm như trước.",
-    "link": "https://vnexpress.net/bac-thang-gan-4-m-vao-nha-tai-cong-truong-vanh-dai-3-tp-hcm-4862463.html",
-    "cat": "thoi-su",
-    "positivity": 4,
+    "title": "Phấn hoa - nỗi ám ảnh của người Việt ở nước ngoài",
+    "content": "Bài viết đề cập đến nỗi ám ảnh của người Việt Nam sống ở nước ngoài, đặc biệt là tại Nhật Bản, do dị ứng phấn hoa. Nhiều người như Văn Phong và Hồng Hạnh phải bỏ công việc tốt để trở về quê hương vì không thể chịu đựng được triệu chứng dị ứng nặng nề trong mùa xuân. Dị ứng phấn hoa ảnh hưởng nghiêm trọng đến sức khỏe và chất lượng cuộc sống của họ, với tỷ lệ người mắc bệnh ngày càng gia tăng.",
+    "link": "https://vnexpress.net/phan-hoa-noi-am-anh-cua-nguoi-viet-o-nuoc-ngoai-4861536.html",
+    "cat": "suc-khoe",
+    "positivity": 3,
     "importance": 7,
-    "question": "Tại sao nhiều hộ dân ở xa lộ Hà Nội phải bắc thang vào nhà?",
+    "question": "Dị ứng phấn hoa ảnh hưởng đến người Việt ở nước ngoài như thế nào?",
     "answers": [
       {
-        "text": "Vì mặt đường công trình Vành đai 3 hạ thấp hơn nhà.",
+        "text": "Nó khiến họ phải bỏ việc và trở về nước.",
         "correct": true
       },
       {
-        "text": "Do nhà bị giải tỏa một phần.",
+        "text": "Nó không ảnh hưởng nhiều đến công việc.",
         "correct": false
       },
       {
-        "text": "Vì họ muốn làm đẹp cho ngôi nhà.",
+        "text": "Người mắc dị ứng phấn hoa luôn khỏe mạnh.",
         "correct": false
       },
       {
-        "text": "Do thời tiết xấu làm hỏng cầu thang.",
+        "text": "Mọi người đều thích mùa xuân và không lo lắng.",
         "correct": false
       }
     ]
