--- a/home_shortnews.html
+++ b/home_shortnews.html
@@ -81,6 +81,33 @@
     // Example JSON array with news objects
     const newsData = [
   {
+    "title": "Mối quan hệ đặc biệt giữa bộ ba kiện tướng Khánh Thi - Phan Hiển - Chí Anh",
+    "content": "Bộ ba Khánh Thi, Phan Hiển và Chí Anh được ngưỡng mộ không chỉ vì tài năng mà còn vì mối quan hệ văn minh và tình bạn chân thành. Gần đây, Phan Hiển đã công bố bộ ảnh từ năm 2017 chụp cùng Khánh Thi và Chí Anh, thu hút sự chú ý của công chúng. Mặc dù Khánh Thi và Chí Anh từng có một mối tình kéo dài gần một thập kỷ, nhưng cả hai vẫn giữ được tình bạn tốt đẹp sau khi chia tay, hỗ trợ nhau trong sự nghiệp. Phan Hiển, hiện là chồng của Khánh Thi, cũng có mối quan hệ thân thiết với Chí Anh, điều này cho thấy sự gắn bó và tôn trọng lẫn nhau giữa họ.",
+    "link": "https://dantri.com.vn/giai-tri/moi-quan-he-dac-biet-giua-bo-ba-kien-tuong-khanh-thi-phan-hien-chi-anh-20250319124250838.htm",
+    "cat": "giai-tri",
+    "positivity": 9,
+    "importance": 7,
+    "question": "Mối quan hệ giữa Khánh Thi, Phan Hiển và Chí Anh như thế nào?",
+    "answers": [
+      {
+        "text": "Họ có mối quan hệ bạn bè văn minh và hỗ trợ nhau.",
+        "correct": true
+      },
+      {
+        "text": "Họ không còn liên lạc với nhau.",
+        "correct": false
+      },
+      {
+        "text": "Họ là đối thủ trong làng khiêu vũ thể thao.",
+        "correct": false
+      },
+      {
+        "text": "Họ đã từng xảy ra mâu thuẫn lớn.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Hết thời hiệu xử phạt nguội, có phải đóng phạt?",
     "content": "Bài viết phân tích về thời hiệu xử phạt vi phạm hành chính trong trường hợp phạt nguội. Theo quy định, thời hiệu này là một năm kể từ khi kết thúc hành vi vi phạm. Trong trường hợp của ông Đ.V.Th., do đã quá thời hiệu xử phạt 4 ngày, cơ quan chức năng không có quyền ra quyết định xử phạt và yêu cầu ông phải đến nơi phát hiện lỗi để xử lý. Điều này cho thấy việc nộp phạt nguội còn nhiều bất cập và cần cải thiện.",
     "link": "https://tuoitre.vn/het-thoi-hieu-xu-phat-nguoi-co-phai-dong-phat-20250317114259998.htm",
