Batch update of generated files

--- a/home.html
+++ b/home.html
@@ -148,6 +148,37 @@
     // Replace this with your actual news data.
     const newsData = [
   {
+    "title": "Andreeva - hơn cả một thần đồng",
+    "content": "Ở tuổi 17, tay vợt Mirra Andreeva đã chứng tỏ mình là một tài năng xuất sắc trong làng quần vợt nữ. Cô đã giành được danh hiệu WTA 1000 thứ hai liên tiếp và trở thành tay vợt trẻ nhất trong lịch sử đánh bại cả số một và số hai thế giới để vô địch một sự kiện WTA Tour. Kể từ khi nổi lên từ năm 15 tuổi, Andreeva đã có những chiến thắng ấn tượng và hiện đang đứng thứ sáu thế giới.",
+    "link": "https://vnexpress.net/andreeva-hon-ca-mot-than-dong-4863285.html",
+    "cat": "the-thao",
+    "positivity": 9,
+    "importance": 8,
+    "question": "Mirra Andreeva đã đạt được thành tích gì nổi bật trong mùa giải này?",
+    "answers": [
+      {
+        "text": "Giành được danh hiệu WTA 1000 thứ hai liên tiếp",
+        "correct": true
+      },
+      {
+        "text": "Thua trận trước số một thế giới",
+        "correct": false
+      },
+      {
+        "text": "Không giành được danh hiệu nào",
+        "correct": false
+      },
+      {
+        "text": "Đứng thứ 10 thế giới",
+        "correct": false
+      },
+      {
+        "text": "Thua trận ở vòng đầu tiên",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Bắt cựu nhân viên ngân hàng HDbank ở Sơn La",
     "content": "Nguyễn Huy Lâm, một cựu nhân viên của ngân hàng HDBank chi nhánh Sơn La, đã bị bắt giữ vì tội lừa đảo chiếm đoạt tài sản. Hắn đã lợi dụng danh nghĩa nhân viên ngân hàng để gian dối chiếm đoạt 950 triệu đồng từ ngân hàng thông qua hợp đồng vay vốn của khách hàng. Cơ quan Cảnh sát điều tra đã ra quyết định khởi tố và kêu gọi những ai là nạn nhân liên quan đến vụ việc này đến trình báo.",
     "link": "https://tuoitre.vn/bat-cuu-nhan-vien-ngan-hang-hdbank-o-son-la-20250319152703889.htm",
@@ -1930,33 +1961,6 @@
     ]
   },
   {
-    "title": "Cô gái mắc chứng 'xương hóa đá'",
-    "content": "Cô gái 28 tuổi ở Bắc Giang mắc bệnh xương hóa đá, một bệnh lý di truyền hiếm gặp, gây đau khớp và khó khăn trong vận động. Cô đã trải qua phẫu thuật thay khớp háng nhân tạo do tình trạng bệnh nghiêm trọng, khiến xương trở nên cứng nhưng lại rất giòn. Ca phẫu thuật kéo dài 5 giờ đã thành công, giúp cô thoát khỏi cơn đau và có thể đi lại bình thường.",
-    "link": "https://vnexpress.net/co-gai-mac-chung-xuong-hoa-da-4863071.html",
-    "cat": "suc-khoe",
-    "positivity": 7,
-    "importance": 8,
-    "question": "Bệnh xương hóa đá là gì và ảnh hưởng như thế nào đến bệnh nhân?",
-    "answers": [
-      {
-        "text": "Bệnh xương hóa đá là một rối loạn di truyền hiếm gặp, khiến xương trở nên cứng nhưng giòn.",
-        "correct": true
-      },
-      {
-        "text": "Bệnh xương hóa đá là một bệnh lây truyền qua đường hô hấp.",
-        "correct": false
-      },
-      {
-        "text": "Bệnh xương hóa đá là một bệnh về hệ tiêu hóa.",
-        "correct": false
-      },
-      {
-        "text": "Bệnh xương hóa đá là một chứng bệnh da liễu.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Chơi tung hứng với bố, bé một tuổi gãy xương đùi",
     "content": "Trong một vụ tai nạn đáng tiếc, một bé trai một tuổi đã bị gãy xương đùi khi chơi tung hứng với bố. Sau khi nhập viện với tình trạng đau đớn và sợ hãi, bé được bác sĩ tiến hành bó bột toàn thân để ổn định xương gãy. Bác sĩ khuyến cáo rằng các trò chơi mạnh có thể gây hại cho trẻ nhỏ, không chỉ làm gãy xương mà còn ảnh hưởng đến hệ thần kinh của trẻ.",
     "link": "https://vnexpress.net/choi-tung-hung-voi-bo-be-mot-tuoi-gay-xuong-dui-4862991.html",
@@ -2010,6 +2014,33 @@
       },
       {
         "text": "Vitamin D và magie",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Cô gái mắc chứng 'xương hóa đá'",
+    "content": "Cô gái 28 tuổi ở Bắc Giang mắc bệnh xương hóa đá, một bệnh lý di truyền hiếm gặp, gây đau khớp và khó khăn trong vận động. Cô đã trải qua phẫu thuật thay khớp háng nhân tạo do tình trạng bệnh nghiêm trọng, khiến xương trở nên cứng nhưng lại rất giòn. Ca phẫu thuật kéo dài 5 giờ đã thành công, giúp cô thoát khỏi cơn đau và có thể đi lại bình thường.",
+    "link": "https://vnexpress.net/co-gai-mac-chung-xuong-hoa-da-4863071.html",
+    "cat": "suc-khoe",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Bệnh xương hóa đá là gì và ảnh hưởng như thế nào đến bệnh nhân?",
+    "answers": [
+      {
+        "text": "Bệnh xương hóa đá là một rối loạn di truyền hiếm gặp, khiến xương trở nên cứng nhưng giòn.",
+        "correct": true
+      },
+      {
+        "text": "Bệnh xương hóa đá là một bệnh lây truyền qua đường hô hấp.",
+        "correct": false
+      },
+      {
+        "text": "Bệnh xương hóa đá là một bệnh về hệ tiêu hóa.",
+        "correct": false
+      },
+      {
+        "text": "Bệnh xương hóa đá là một chứng bệnh da liễu.",
         "correct": false
       }
     ]
@@ -2463,33 +2494,6 @@
     ]
   },
   {
-    "title": "Hơn thập kỷ vô sinh do biến chứng đái tháo đường",
-    "content": "Anh Tiến, 47 tuổi, đã phải sống với tình trạng vô sinh suốt 12 năm do biến chứng đái tháo đường, dẫn đến rối loạn cương và không có tinh trùng. Sau khi điều trị tại các cơ sở y tế ở Mỹ mà không thành công, anh đã trở về Việt Nam để thực hiện phương pháp thụ tinh ống nghiệm tại IVF Tâm Anh TP HCM. Dù gặp khó khăn trong việc xuất tinh, bác sĩ vẫn tìm ra tinh trùng trong nước tiểu và áp dụng phương pháp TESE để thu tinh trùng cho quá trình thụ tinh ống nghiệm, với kết quả khả quan.",
-    "link": "https://vnexpress.net/hon-thap-ky-vo-sinh-do-bien-chung-dai-thao-duong-4862993.html",
-    "cat": "suc-khoe",
-    "positivity": 7,
-    "importance": 8,
-    "question": "Anh Tiến đã bị vô sinh do nguyên nhân gì?",
-    "answers": [
-      {
-        "text": "Biến chứng đái tháo đường",
-        "correct": true
-      },
-      {
-        "text": "Thiếu hoạt động thể chất",
-        "correct": false
-      },
-      {
-        "text": "Chế độ ăn uống kém",
-        "correct": false
-      },
-      {
-        "text": "Căng thẳng tâm lý",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Nhiều nhân giáp gây nổi bướu vùng cổ người phụ nữ",
     "content": "Bài viết mô tả trường hợp của chị Hiền, 54 tuổi, ở TP.HCM, bị bướu giáp đa nhân sau khi phát hiện nổi u ở cổ. Qua chẩn đoán, bác sĩ xác định chị mắc ung thư biểu mô tuyến giáp thể nhú biến thể nang, tuy nhiên bệnh có tiên lượng tốt với tỷ lệ sống trên 5 năm hơn 98%. Sau ca phẫu thuật thành công, bệnh nhân hồi phục nhanh chóng và cần theo dõi định kỳ để phòng ngừa.",
     "link": "https://vnexpress.net/nhieu-nhan-giap-gay-noi-buou-vung-co-nguoi-phu-nu-4862920.html",
@@ -2539,6 +2543,33 @@
       },
       {
         "text": "Vì anh Mạnh thường xuyên tập thể dục.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Hơn thập kỷ vô sinh do biến chứng đái tháo đường",
+    "content": "Anh Tiến, 47 tuổi, đã phải sống với tình trạng vô sinh suốt 12 năm do biến chứng đái tháo đường, dẫn đến rối loạn cương và không có tinh trùng. Sau khi điều trị tại các cơ sở y tế ở Mỹ mà không thành công, anh đã trở về Việt Nam để thực hiện phương pháp thụ tinh ống nghiệm tại IVF Tâm Anh TP HCM. Dù gặp khó khăn trong việc xuất tinh, bác sĩ vẫn tìm ra tinh trùng trong nước tiểu và áp dụng phương pháp TESE để thu tinh trùng cho quá trình thụ tinh ống nghiệm, với kết quả khả quan.",
+    "link": "https://vnexpress.net/hon-thap-ky-vo-sinh-do-bien-chung-dai-thao-duong-4862993.html",
+    "cat": "suc-khoe",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Anh Tiến đã bị vô sinh do nguyên nhân gì?",
+    "answers": [
+      {
+        "text": "Biến chứng đái tháo đường",
+        "correct": true
+      },
+      {
+        "text": "Thiếu hoạt động thể chất",
+        "correct": false
+      },
+      {
+        "text": "Chế độ ăn uống kém",
+        "correct": false
+      },
+      {
+        "text": "Căng thẳng tâm lý",
         "correct": false
       }
     ]
