Batch update of generated files

--- a/home_shortnews.html
+++ b/home_shortnews.html
@@ -81,6 +81,33 @@
     // Example JSON array with news objects
     const newsData = [
   {
+    "title": "Báo Mỹ: Washington cân nhắc từ bỏ vai trò 75 năm ở NATO",
+    "content": "Chính quyền Tổng thống Mỹ Donald Trump đang xem xét khả năng từ bỏ vai trò lãnh đạo của Mỹ trong NATO, một vai trò đã duy trì suốt 75 năm qua. Tin tức này được đưa ra sau khi Tổng thống Trump và Bộ trưởng Quốc phòng yêu cầu các đồng minh NATO tăng cường chi tiêu quân sự. Nếu Washington quyết định từ bỏ vị trí Tổng Tư lệnh Tối cao Lực lượng Đồng minh tại châu Âu, điều này có thể làm suy yếu đáng kể ảnh hưởng của Mỹ trong liên minh và gây căng thẳng quan hệ với các thành viên NATO.",
+    "link": "https://dantri.com.vn/the-gioi/bao-my-washington-can-nhac-tu-bo-vai-tro-75-nam-o-nato-20250319155643052.htm",
+    "cat": "the-gioi",
+    "positivity": 3,
+    "importance": 8,
+    "question": "Washington có thể từ bỏ vai trò gì trong NATO?",
+    "answers": [
+      {
+        "text": "Vai trò lãnh đạo quân sự",
+        "correct": true
+      },
+      {
+        "text": "Vai trò kinh tế",
+        "correct": false
+      },
+      {
+        "text": "Vai trò ngoại giao",
+        "correct": false
+      },
+      {
+        "text": "Vai trò văn hóa",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "42 tuổi mới phát hiện có hai tử cung",
     "content": "Chị Hạnh, 42 tuổi, đã phát hiện mình có hai tử cung và hai âm đạo sau khi đi khám do chu kỳ kinh kéo dài 14 ngày. Tình trạng này khá hiếm gặp, chỉ chiếm 5% các dị tật tử cung và thường không được phát hiện nếu không có kiểm tra y tế. Sau khi phát hiện, bác sĩ đã phẫu thuật cắt bỏ một tử cung chứa khối u xơ lớn để cải thiện sức khỏe cho chị. Mặc dù có hai tử cung, chị Hạnh vẫn có khả năng mang thai và có kinh nguyệt bình thường.",
     "link": "https://vnexpress.net/42-tuoi-moi-phat-hien-co-hai-tu-cung-4862862.html",
@@ -1577,37 +1604,6 @@
     ]
   },
   {
-    "title": "'Mẹ bỉm sữa' giảm 7 kg trong hai tháng",
-    "content": "Chị Trang, 30 tuổi, đã giảm 7 kg trong hai tháng sau khi áp dụng chế độ ăn uống và tập luyện theo phác đồ của bác sĩ, thay vì nhịn ăn. Sau khi tăng 22 kg trong thời gian mang thai và gặp khó khăn trong việc giảm cân, chị đã tìm đến Trung tâm Kiểm soát cân nặng và được thiết kế một chế độ ăn đủ dinh dưỡng để đảm bảo chất lượng sữa cho con. Kết quả, chị không chỉ giảm cân mà còn cải thiện sức khỏe tổng thể.",
-    "link": "https://vnexpress.net/me-bim-sua-giam-7-kg-trong-hai-thang-4863189.html",
-    "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Chị Trang đã giảm được bao nhiêu kg sau hai tháng điều trị?",
-    "answers": [
-      {
-        "text": "7 kg",
-        "correct": true
-      },
-      {
-        "text": "5 kg",
-        "correct": false
-      },
-      {
-        "text": "10 kg",
-        "correct": false
-      },
-      {
-        "text": "8 kg",
-        "correct": false
-      },
-      {
-        "text": "6 kg",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Dấu hiệu nào ở tay, vai cảnh báo ung thư phổi?",
     "content": "Ung thư phổi có thể gây ra các triệu chứng hô hấp như ho ra máu và khó thở. Ngoài ra, khi khối u đã lan rộng, nó có thể xuất hiện các dấu hiệu tại tay và vai, như là hiện tượng ngón tay và bả vai bị ảnh hưởng. Điều này cảnh báo người bệnh cần được kiểm tra kịp thời để phát hiện bệnh.",
     "link": "https://vnexpress.net/dau-hieu-nao-o-tay-vai-canh-bao-ung-thu-phoi-4863116.html",
@@ -1634,6 +1630,37 @@
       },
       {
         "text": "Chóng mặt",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "'Mẹ bỉm sữa' giảm 7 kg trong hai tháng",
+    "content": "Chị Trang, 30 tuổi, đã giảm 7 kg trong hai tháng sau khi áp dụng chế độ ăn uống và tập luyện theo phác đồ của bác sĩ, thay vì nhịn ăn. Sau khi tăng 22 kg trong thời gian mang thai và gặp khó khăn trong việc giảm cân, chị đã tìm đến Trung tâm Kiểm soát cân nặng và được thiết kế một chế độ ăn đủ dinh dưỡng để đảm bảo chất lượng sữa cho con. Kết quả, chị không chỉ giảm cân mà còn cải thiện sức khỏe tổng thể.",
+    "link": "https://vnexpress.net/me-bim-sua-giam-7-kg-trong-hai-thang-4863189.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Chị Trang đã giảm được bao nhiêu kg sau hai tháng điều trị?",
+    "answers": [
+      {
+        "text": "7 kg",
+        "correct": true
+      },
+      {
+        "text": "5 kg",
+        "correct": false
+      },
+      {
+        "text": "10 kg",
+        "correct": false
+      },
+      {
+        "text": "8 kg",
+        "correct": false
+      },
+      {
+        "text": "6 kg",
         "correct": false
       }
     ]
